--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "postcss": "^8.4.5",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.0.11",
@@ -41,6 +42,7 @@
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
