--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "autoprefixer": "^10.4.1",
     "core-js": "^3.6.5",
     "postcss": "^8.4.5",
